--- a/site/resources/styles/core/forms/theme.less
+++ b/site/resources/styles/core/forms/theme.less
@@ -1,99 +1,94 @@
-.basic-form fieldset legend
-{
-  font-weight: bold;
-  border: 1px solid silver;
-  background: #EEE;
-  padding: 2px 5px;
-}
+@import "../core-values";
 
-.basic-form .help
+.basic-form
 {
-  padding: 5px;
-  padding-left: 25px;
-  background-image: url(info.png);
-  background-repeat: no-repeat;
-  background-position: 2px 5px;
-  border: 1px solid #AAF;
-  background-color: #DDEEFF;
-  color: #666666;
-  font-size: 80%;
-  line-height: 130%;
-}
+  fieldset
+  {
+    border-top: @hairline_border_width dotted @control_border_color;
 
-.basic-form .hint
-{
-  font-size: 85%;
-  font-style: italic;
-}
+    legend
+    {
+      padding: @standard_border_radius / 2 @standard_border_radius;
+      margin-left: -@standard_border_radius - @hairline_border_width;
+    }
+  }
 
-.basic-form input
-.basic-form textarea
-.basic-form select
-{ 
-  background-color: white;
-  border: 1px solid gray;
-  padding: 2px 2px;
-}
+  input[type=text],
+  input[type=password],
+  input[type=file],
+  textarea
+  {
+    margin-top: -.3em;
+  }
 
-.basic-form textarea,
-.basic-form input[type=text],
-.basic-form input[type=password],
-.basic-form select
-{
-  font-family: "Lucida Grande", Lucida, Verdana, Arial, Helvetica, sans-serif;
-  font-size: 10pt;
-}
+  .help
+  {
+    padding: @small_spacing;
+    padding-left: 25px;
+    background-image: url(../../../icons/webcore_png/indicators/info_16px.png);
+    background-repeat: no-repeat;
+    background-position: 5px 8px;
+    border: 1px solid #AAF;
+    background-color: #DDEEFF;
+    color: #666666;
+  }
 
-.basic-form textarea
-{
-	height: 85px;
-}
+  .hint
+  {
+    font-size: 85%;
+    font-style: italic;
+  }
 
-.basic-form label:first-child:after
-{
-  content: ":";
-}
+  label
+  {
+    .title
+    {
 
-.basic-form .required label:first-child
-{
-  font-weight: bold;
-}
+    }
 
-.basic-form fieldset
-{
-  border: 1px solid gray;
-}
+    .description
+    {
+      display: block;
+      font-style: italic;
+    }
+  }
 
-.basic-form .group
-{
-  line-height: 135%;
-}
+  textarea
+  {
+    height: 85px;
+  }
 
-a.cancel:link
-{
-	color: #666666;
-}
+  label:first-child:after
+  {
+    //  content: ":";
+  }
 
-a.cancel:visited
-{
-	color: #666666;
-}
+  .required label:first-child
+  {
+    font-weight: bold;
+  }
 
-.buttons-top
-{
-	padding-bottom: 10px;
-	border-bottom: 1px solid silver;
-}
+  .group
+  {
+    line-height: 135%;
+  }
 
-.buttons-middle
-{
-	border: 1px solid silver;
-	border-width: 1px 0;
-	padding: 10px 0;
-}
+  .buttons-top
+  {
+    padding-bottom: 10px;
+    border-bottom: 1px solid silver;
+  }
 
-.buttons-bottom
-{
-	border-top: 1px solid silver;
-	padding-top: 10px;
+  .buttons-middle
+  {
+    border: 1px solid silver;
+    border-width: 1px 0;
+    padding: 10px 0;
+  }
+
+  .buttons-bottom
+  {
+    border-top: 1px solid silver;
+    padding-top: 10px;
+  }
 }
