--- a/site/resources/themes/hochzeit.less
+++ b/site/resources/themes/hochzeit.less
@@ -49,8 +49,6 @@ body
 
 .banner,
 .footer,
-.text-control,
-.menu-control,
 .graph-foreground,
 .button.selected
 {
@@ -69,4 +67,15 @@ ul.menu
 .menu-group-title
 {
   background: #DDCCBB url(hochzeit/fossil_paper_light.jpg) repeat;
+}
+
+.style-controls
+{
+  input[type=password],
+  input[type=text],
+  select,
+  textarea
+  {
+    background: #DDCCBB url(hochzeit/fossil_paper_light.jpg) repeat;
+  }
 }
