--- a/site/resources/themes/osx_panther.css
+++ b/site/resources/themes/osx_panther.css
@@ -128,7 +128,7 @@ table.columns > tbody > tr > th,
 .preview,
 .chart,
 pre > code,
-.form-basic-block,
+.basic-form-block,
 .pullquote {
   border-color: #bfbfbf;
 }
@@ -191,26 +191,75 @@ pre > code,
 .quote-block {
   color: #5e5e5e;
 }
-.button {
+.style-controls input,
+.style-controls select {
+  margin: 0;
+}
+.style-controls input[type="radio"],
+.style-controls input[type="checkbox"] {
+  vertical-align: middle;
+  margin: 0;
+  padding: 0;
+}
+.style-controls button,
+.style-controls input[type=submit],
+.style-controls input[type=text],
+.style-controls input[type=password],
+.style-controls input[type=button],
+.style-controls select,
+.style-controls textarea {
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
+}
+.style-controls input[type=text],
+.style-controls input[type=password],
+.style-controls select,
+.style-controls textarea {
+  background-color: #ffffff;
+  border: 1px solid #999999;
+  border-radius: 4px;
+  padding: 4px;
+  margin-left: -5px;
+}
+.button,
+.style-controls button,
+.style-controls input[type=submit],
+.style-controls input[type=button] {
   background-color: #bdbdbd;
   border-color: #999999;
   color: #4d4d4d;
 }
 a.button:link,
-a.button:visited {
+a.button:visited,
+a.style-controls button:link,
+a.style-controls button:visited,
+a.style-controls input[type=submit]:link,
+a.style-controls input[type=submit]:visited,
+a.style-controls input[type=button]:link,
+a.style-controls input[type=button]:visited {
   color: #4d4d4d;
 }
-.button.selected {
+.button.selected,
+.style-controls button.selected,
+.style-controls input[type=submit].selected,
+.style-controls input[type=button].selected {
   background-color: #d4d4d4;
   border-color: #999999;
   color: #366dc8;
 }
-.button.disabled {
+.button.disabled,
+.style-controls button.disabled,
+.style-controls input[type=submit].disabled,
+.style-controls input[type=button].disabled {
   background-color: #bfbfbf;
   border-color: #ababab;
   color: #808080;
 }
-.button:hover:not(.disabled):not(.selected) {
+.button:hover:not(.disabled):not(.selected),
+.style-controls button:hover:not(.disabled):not(.selected),
+.style-controls input[type=submit]:hover:not(.disabled):not(.selected),
+.style-controls input[type=button]:hover:not(.disabled):not(.selected) {
   background-color: #d4d4d4;
   border-color: #999999;
 }
@@ -229,11 +278,14 @@ ul.menu .menu-item:hover {
 ul.menu .menu-item-description {
   color: #4d4d4d;
 }
-.text-control,
-.menu-control {
+form.style-controls input[type=text],
+form.style-controls input[type=password],
+form.style-controls select,
+form.style-controls textarea {
   background-color: #ffffff;
-  color: #4d4d4d;
   border-color: #999999;
+  border-radius: 4px;
+  padding: 4px;
 }
 body {
   background-image: url(osx/os_x_app_background.png);
@@ -256,16 +308,18 @@ body {
   border: 2px solid;
   border-color: #ffffff #b3b3b3 #b3b3b3 #ffffff;
 }
-.form-basic,
-.form-basic-block {
+.basic-form,
+.basic-form-block {
   border: 2px solid;
   border-color: #b3b3b3 #ffffff #ffffff #b3b3b3;
   background-image: url(osx/5_percent_black.png);
   background-repeat: repeat;
   padding: 5px;
 }
-.text-control,
-.menu-control {
+.style-controls input[type=password],
+.style-controls input[type=text],
+.style-controls select,
+.style-controls textarea {
   border: 1px solid;
   border-color: #b3b3b3 #ffffff #ffffff #b3b3b3;
 }
