--- a/site/resources/styles/core/forms/base.less
+++ b/site/resources/styles/core/forms/base.less
@@ -1,41 +1,45 @@
+@import "../core-values";
+
 .basic-form
 {
   fieldset
   {
     margin: 0px;
-    margin-top: 15px;
+    margin-top: @standard_spacing;
+
+    fieldset .group
+    {
+      margin-left: 0px;
+    }
   }
 
   input, textarea, select
   {
     margin-left: 0px;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
   }
 
-  input[type=checkbox], input[type=radio]
+  input[type=checkbox],
+  input[type=radio]
   {
     vertical-align: baseline;
     margin-left: 0px;
-    margin-top: 3px;
+    margin-top: .5em;
   }
 
-  input[type=submit],
-  button
+  .help
   {
-    /* Do not use the surrounding line-height; instead, use padding. */
+    p:first-child
+    {
+      margin-top: 0px;
+    }
 
-    display: inline-block;
-    line-height: normal;
-    padding: 2px 8px;
-  }
-
-  .help p:first-child
-  {
-    margin-top: 0px;
-  }
-
-  .help p:last-child
-  {
-    margin-bottom: 0px;
+    p:last-child
+    {
+      margin-bottom: 0px;
+    }
   }
 
   .hint,
@@ -50,37 +54,35 @@
   {
     display: block;
     margin: 3px 0px;
+
+    + .group
+    {
+      clear: left;
+    }
   }
 
-  fieldset fieldset .group
+  .one-input
   {
-    margin-left: 0px;
-  }
+    input:first-child
+    {
+      float: left;
+      padding: 0px;
+      margin-left: 0px;
+    }
 
-  .group + .group
-  {
-    clear: left;
-  }
+    label
+    {
+      display: block;
+      margin-left: 18px;
+    }
 
-  .one-input input:first-child
-  {
-    float: left;
-    padding: 0px;
-    margin-left: 0px;
-  }
-
-  .one-input label
-  {
-    display: block;
-    margin-left: 18px;
-  }
-
-  .one-input label:first-child
-  {
-    float: left;
-    display: inline-block;
-    padding-right: 5px;
-    margin-left: 0px;
+    label:first-child
+    {
+      float: left;
+      display: inline-block;
+      padding-right: @small_spacing;
+      margin-left: 0px;
+    }
   }
 }
 
