--- a/site/resources/styles/core/forms/ltr-right.less
+++ b/site/resources/styles/core/forms/ltr-right.less
@@ -1,31 +1,37 @@
-.basic-form fieldset fieldset,
-.basic-form .hint,
-.basic-form fieldset .group,
-.basic-form fieldset legend
-{
-  margin-left: 0px;
-}
+@import "../core-values";
+@import "form-values";
 
-.basic-form fieldset
+.basic-form
 {
-  margin-left: 200px;
-  border-left-width: 0px;
-  border-right-width: 0px;
-  border-bottom-width: 0px;
-  padding-left: 0px;
-}
+  fieldset
+  {
+    margin-left: @label-area-width;
+    border: none;
+    padding-left: 0px;
 
-.basic-form > p
-{
-  /* Applies to field rows appearing directly in a form (not in a fieldset). */
+    fieldset,
+    .group
+    {
+      margin-left: 0;
+    }
+  }
 
-  margin-left: 200px;
-}
+  .hint
+  {
+    margin-left: 0;
+  }
 
-.basic-form label:first-child,
-.basic-form label:first-child,
-.basic-form .one-input label:first-child
-{
-  margin-left: -210px;
-  text-align: right;
+  > p
+  {
+    /* Applies to form rows appearing directly in a form (not in a fieldset). */
+
+    margin-left: @label-area-width;
+  }
+
+  label:first-child,
+  .one-input label:first-child
+  {
+    margin-left: -@label-area-width - @standard_spacing;
+    text-align: right;
+  }
 }
