--- a/site/resources/styles/core/forms/top-left.less
+++ b/site/resources/styles/core/forms/top-left.less
@@ -1,9 +1,3 @@
-.basic-form > p,
-.basic-form > div
-{
-  margin-left: 10px !important;
-}
-
 .basic-form fieldset label:first-child
 {
   width: 190px;
@@ -11,7 +5,5 @@
 
 .basic-form fieldset
 {
-  /* The border is one pixel, so this makes 10 pixels in all. */
-  
-  padding-left: 9px;
+  padding-left: 0;
 }
