--- a/site/resources/styles/core/large.css
+++ b/site/resources/styles/core/large.css
@@ -43,8 +43,6 @@ body,
 h4,
 td,
 th,
-.menu-control,
-.text-control,
 .menu,
 .nav-box,
 .button,
@@ -62,7 +60,7 @@ h5,
 .login-status,
 .footnote-reference,
 .subdued,
-.form-basic-description
+.basic-form-description
 {
   font-size: 12pt;
 }
