--- a/site/resources/styles/fonts/anonymous-pro.css
+++ b/site/resources/styles/fonts/anonymous-pro.css
@@ -1,8 +1,6 @@
 @import "http://fonts.googleapis.com/css?family=Anonymous+Pro:400,700";
 
-body,
-.text-control,
-.menu-control
+body
 {
 	font-family: "Anonymous Pro", "Courier New", Courier, mono, monospace;
 }
