--- a/site/resources/styles/fonts/buda.css
+++ b/site/resources/styles/fonts/buda.css
@@ -1,8 +1,6 @@
 @import "http://fonts.googleapis.com/css?family=Buda:300";
 
-body,
-.text-control,
-.menu-control
+body
 {
 	font-family: 'Buda', Georgia, Times New Roman, Times, serif;
 }
