--- a/site/resources/styles/fonts/cousine.css
+++ b/site/resources/styles/fonts/cousine.css
@@ -1,8 +1,6 @@
 @import "http://fonts.googleapis.com/css?family=Cousine";
 
-body,
-.text-control,
-.menu-control
+body
 {
 	font-family: "Cousine", "Courier New", Courier, monospace
 }
