--- a/site/resources/styles/fonts/josefin-sans.css
+++ b/site/resources/styles/fonts/josefin-sans.css
@@ -1,8 +1,6 @@
 @import "http://fonts.googleapis.com/css?family=Josefin+Sans:400,700";
 
-body,
-.text-control,
-.menu-control
+body
 {
 	font-family: 'Josefin Sans', Verdana, Arial, Helvetica, sans-serif;
 }
