--- a/site/resources/styles/fonts/jura.css
+++ b/site/resources/styles/fonts/jura.css
@@ -1,8 +1,6 @@
 @import "http://fonts.googleapis.com/css?family=Jura";
 
-body,
-.text-control,
-.menu-control
+body
 {
 	font-family: 'Jura', Verdana, Arial, Helvetica, sans-serif;
 }
