--- a/site/resources/styles/fonts/oxygen.css
+++ b/site/resources/styles/fonts/oxygen.css
@@ -1,8 +1,6 @@
 @import "http://fonts.googleapis.com/css?family=Oxygen:400,700";
 
-body,
-.text-control,
-.menu-control
+body
 {
 	font-family: 'Oxygen', Verdana, Arial, Helvetica, sans-serif;
 }
