--- a/site/resources/styles/fonts/quicksand.css
+++ b/site/resources/styles/fonts/quicksand.css
@@ -1,8 +1,6 @@
 @import "http://fonts.googleapis.com/css?family=Quicksand";
 
-body,
-.text-control,
-.menu-control
+body
 {
 	font-family: 'Quicksand', Verdana, Arial, Helvetica, sans-serif;
 }
